# llvm-project-prebuilts

./: .gitmodules  CMakeLists.txt  README.md  build_root.cmake  free.py  m.cpp  ndk_25_bin.txt  try_get_release.sh  try_get_release_or.sh  update_alternatives_clang.sh
.devcontainer/: devcontainer.json
.github/workflows/: android.yml  linux.yml  macos.yml  spec.yaml  windows.yml  windows_msys2.yml
editline_windows/: CMakeLists.txt  build_root.cmake  make_clang.sh  make_gcc.sh
tmp/: split.sh
zip_split/: CMakeLists.txt  make.sh  mmap.cpp  mmap.h  zip_split.cpp
zip_split/cppfs/: CMakeLists.txt
zip_split/cppfs/source/: CMakeLists.txt
zip_split/cppfs/source/cppfs/: CMakeLists.txt
zip_split/mmaptwo-plus/: CMakeLists.txt  README.md  mmaptwo.cpp  mmaptwo.hpp
zip_split/mmaptwo-plus/tests/: config.cpp  dump.cpp
